data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3108.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\95\80\80\80\00\01\03\65\6e\76\0d\69"
    "\6d\70\6f\72\74\65\64\5f\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\0a\9c\80\80\80\00\01\96\80\80"
    "\80\00\00\02\7f\02\7f\02\7f\10\00\0f\41\00\0b\0f"
    "\41\00\0b\0f\41\00\0b\0b"
  )
""
)